### fix(gml-generator): Added make command to generate GML, fixed Python 3.10 error, updated README (HEAD -> fix/gml-generator)
>Wed, 15 May 2024 15:00:08 +0200

>Author: Emile-Muller (emile.muller.contact@gmail.com)

>Commiter: Emile-Muller (emile.muller.contact@gmail.com)




### fix(formula): Fixed formula.html URL (origin/main, origin/HEAD, main)
>Wed, 15 May 2024 11:44:57 +0200

>Author: Emile-Muller (emile.muller.contact@gmail.com)

>Commiter: Emile-Muller (emile.muller.contact@gmail.com)




### design(formula): Link in formula.html now shows properly.
>Wed, 15 May 2024 11:30:50 +0200

>Author: Emile-Muller (emile.muller.contact@gmail.com)

>Commiter: Emile-Muller (emile.muller.contact@gmail.com)




### chore(copyright): Updated copyright date and copyright test for 'formula.html'
>Wed, 15 May 2024 10:38:23 +0200

>Author: Emile-Muller (emile.muller.contact@gmail.com)

>Commiter: Emile-Muller (emile.muller.contact@gmail.com)




### feat(GML): Added GMLDataFiller to fill necessary data for GML validation. Added logging in the script.
>Mon, 29 Apr 2024 09:30:13 +0200

>Author: Emile-Muller (emile.muller.contact@gmail.com)

>Commiter: Alexis Manin (44767131+alexismanin@users.noreply.github.com)




### feat(ApacheSIS): Replaced GDAL call to GML files generated by Apache SIS. Added script to generate GML files from WKT with Apache SIS. Updated generated GML test.
>Thu, 11 Apr 2024 15:00:17 +0200

>Author: Emile-Muller (emile.muller.contact@gmail.com)

>Commiter: Alexis Manin (44767131+alexismanin@users.noreply.github.com)




### refactor(search.py): Refactored and optimized code for search.py
>Thu, 11 Apr 2024 14:38:17 +0200

>Author: Emile-Muller (emile.muller.contact@gmail.com)

>Commiter: Alexis Manin (44767131+alexismanin@users.noreply.github.com)




### fix(Makefile): Fixed the 'make help' function in Makefile
>Thu, 11 Apr 2024 14:22:25 +0200

>Author: Emile-Muller (emile.muller.contact@gmail.com)
